# whysDemoProject

./: README.md  db.sqlite3  manage.py  pyproject.toml
whysDemoProject/: asgi.py  settings.py  urls.py  wsgi.py
whys_rest/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
whys_rest/migrations/: 0001_initial.py
