[tool.poetry]
name = "whysdemoproject"
version = "0.1.0"
description = ""
authors = ["Richard Ostertag <ostertag.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
drf-yasg = "^1.21.7"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
